# frixaco.com

./: .cta.json  .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  AGENTS.md  Cargo.toml  Dockerfile  README.md  VANILLA_IMPLEMENTATION_GUIDE.md  astro.config.mjs  astro.config.ts  blog.html  bun.lockb  eslint.config.mjs  get-activity.ts  global.css  home.html  index.html  mdx-components.tsx  more.html  nav.ts  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  server.ts  socials-projects-exprience.ts  tailwind.config.mjs  tsconfig.json  vite.config.ts
.v1/components/: made-with.astro
nextjs16/: README.md  next.config.ts  nextjs-15-guide.md  tsconfig.json
public/: manifest.json
src/: consts.ts  globals.css  index.html  main.rs  routeTree.gen.ts  router.tsx  styles.css
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Activity.astro  BaseHead.astro  Experience.astro  Header.astro  ModeToggle.astro  Projects.astro  Socials.astro  activity.tsx  discord-logo.astro  drawer.tsx  emaill-logo.astro  experience.tsx  github-logo.astro  linkedin-logo.astro  made-with.astro  mode-toggle.tsx  page-container.tsx  projects.tsx  pulse-icon.astro  section.tsx  socials.astro  socials.tsx  tabs.tsx  telegram-logo.astro  tooltip.astro  tooltip.tsx  x-logo.astro
src/content/: astro-thoughts.mdx  config.ts  tui-lib-from-scratch-1.mdx  tui-lib-from-scratch-2.mdx  tui-lib-from-scratch-3.mdx
src/layouts/: Layout.astro  MainLayout.astro
src/lib/: get-activity.ts  hotkeys.ts
src/pages/: about.astro  blog.astro  index.astro  more.astro  (+1 more)
(+58 files in other folders)
