[package]
name = "frixa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
comrak = "0.50.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
