[package]
name = "frixa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
comrak = "0.50.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["set-header", "compression-gzip"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
